src/pages/en/v1.10.0/deployment/deploy-azure.mdx
---
title: "Deploy to Azure"
metaTitle: "Deploy to Azure"
metaDescription: "Step-by-step guide for deploying OpenReplay on Azure."
layout: ~/layouts/MainLayout.astro
i18nReady: true
---
import YoutubeVideo from '~/components/YoutubeVideo.astro'

<YoutubeVideo title="Watch how to deploy OpenReplay in your Azure infrastructure"
  description="If you don't like reading, you can follow this video tutorial showing you how to deploy OpenReplay in Azure"
  videoURL="https://www.youtube.com/watch?v=bkVw32UKf7Q"
  />



OpenReplay stack can be installed on a single machine and Microsoft Azure is an ideal candidate. Here's how to do it.

## Launch a VM

1. Sign in to your portal
2. Click 'Virtual Machine' if it is available on the main screen. Otherwise, click 'Create a Resource' > 'Compute' > 'Virtual Machine'
3. On the 'Virtual Machine' page, click 'Add' in case you're not automatically redirected to the creation page
4. Pick *Ubuntu Server 20.04 LTS* for the 'Image'
4. Pick your VM specifications. The **minimum** resources are `2 vCPUs, 8 GB of RAM, 50 GB of storage`, otherwise OpenReplay backend services won't simply start. The minimum specs are enough for a low/moderate volume. If you're expecting high traffic, you should scale from here.
5. Enable HTTP (80), HTTPS (443) and SSH (22) ports and take note of the `username`
6. Click 'Review + create'

## Deploy OpenReplay

1. Make sure your VM is `Running` then connect to it:

```bash
## From your terminal
SSH_KEY=~/Downloads/openreplay-key.pem ## only if you've previously created an SSH key
chmod 400 $SSH_KEY
INSTANCE_IP=REPLACE_WITH_INSTANCE_PUBLIC_IP
ssh <username>@$INSTANCE_IP ## or ssh -i $SSH_KEY <username>@$INSTANCE_IP if you have a key
```

2. Install OpenReplay by providing the domain on which it will be running (e.g. DOMAIN_NAME=openreplay.mycompany.com):

```bash
git clone https://github.com/openreplay/openreplay.git
cd openreplay/scripts/helmcharts
DOMAIN_NAME=openreplay.mycompany.com bash init.sh
```

## Configure TLS/SSL

OpenReplay deals with sensitive user data and therefore requires HTTPS to run. This is mandatory, otherwise the tracker simply wouldn't start recording. Same thing for the dashboard, without HTTPS you won't be able to replay user sessions.

You must therefore generate (or bring) your own SSL certificate.

1. First, go to Azure DNS (or your other DNS service provider) and create an `A Record`. Use the domain you previously provided during the installation step and point it to the VM using its public IP.

2. If you're bringing your own certificate, create an SSL secret using the following command: `kubectl create secret tls openreplay-ssl -n app --key="private_key_file.pem" --cert="certificate.crt"`.

> **Note:** If you don't have a certificate, generate one, that auto-renews, for your subdomain (the one provided during installation) using Let's Encrypt. Simply connect to OpenReplay VM, run `cd openreplay/scripts/helmcharts && bash certmanager.sh` and follow the steps.

3. If you wish to enable http to https redirection (recommended), then uncomment the below block, under the `ingress-nginx` section, in `/var/lib/openreplay/vars.yaml`:
   
```yaml
ingress-nginx: &ingress-nginx
  controller:
    config:
      ssl-redirect: true
      force-ssl-redirect: true
```

It's worth mentioning that our `ingress-nginx` runs by default on ports `80|443`, but this can be easily changed, if needed, in `vars.yaml`:

```yaml
ingress-nginx: &ingress-nginx
  controller:
    service:
      ports:
        http: 80
        https: 443
```

4. Finally reinstall OpenReplay NGINX:

```bash
openreplay -R
```

You're all set now, OpenReplay should be accessible on your subdomain. You can create an account by visiting the `/signup` page (i.e. openreplay.mycompany.com/signup).

> **Note:** For additional security, you can also run OpenReplay instance behind an Azure Load Balancer. Check the [Azure LB docs](https://docs.microsoft.com/en-us/azure/load-balancer/load-balancer-overview) for more details.

## Have questions?

If you encounter any issues, connect to our [Slack](https://slack.openreplay.com) or check out our [Forum](https://forum.openreplay.com) and get help from our community.
